--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "backend"]
 	path = backend
-	url = https://github.com/NotNullTeam/backend-openwebui.git
+	url = git@github.com:NotNullTeam/backend-openwebui.git
 	branch = main
